# py-dev-tool-collection

./: .gitignore  README.md
fastapi_demo/: main.py  put_demo.py
module_demo_usage/: .env  pydantic_usage.py  typing_usage.py
mylog/: config.py  my_log.py  other_log.py  test_log.py
uv_pkg_usage/: README.md  basic_demo.py  main.py  pyproject.toml
web_server_demo/: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  reademe.md  requirements.txt  run.py
web_server_demo/app/: main.py
web_server_demo/app/api/v1/: demo_user.py
web_server_demo/app/core/: config.py  log.py
web_server_demo/app/databases/: db_init.py  user_op.py
web_server_demo/app/models/: user.py
web_server_demo/app/schemas/: demo_user.py
web_server_demo/app/services/: get_info.py
web_server_demo/env/: env_prod
web_server_demo/scripts/: build_project.sh  init_env.sh  post_get_info.sh  run_project.sh
web_server_demo/tests/: test_user.py  test_user.sh
