[project]
name = "web-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pypika-tortoise==0.6.0",
    "tortoise==0.1.1",
    "tortoise-orm==0.25.0",
    "uvicorn>=0.35.0",
]
